--- a/app/layout/shell.html
+++ b/app/layout/shell.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-          Weather Dashboard
+          &lt;weather-vnext&#47;&gt;
         </a>
       </div>
     </div>
